[gd_scene load_steps=5 format=3 uid="uid://cmofqtb5vhlpk"]

[ext_resource type="Script" uid="uid://b4hppdpjuiy40" path="res://scenes/player/player.gd" id="1_gfjak"]
[ext_resource type="Texture2D" uid="uid://bf5srs8u10dpo" path="res://assets/kenney_scribble-platformer/Spritesheet/spritesheet_default.png" id="2_4kuee"]
[ext_resource type="PackedScene" uid="uid://dronsvhs4yumv" path="res://scenes/action/attack/sword/sword_attack.tscn" id="3_4kuee"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_524rm"]
radius = 16.0
height = 52.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 17
script = ExtResource("1_gfjak")
metadata/_edit_group_ = true

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_4kuee")
hframes = 11
vframes = 11
frame = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_524rm")

[node name="LeftHand" type="Sprite2D" parent="."]
texture = ExtResource("2_4kuee")
hframes = 11
vframes = 11
frame = 108

[node name="RightHand" type="Sprite2D" parent="."]
texture = ExtResource("2_4kuee")
hframes = 11
vframes = 11
frame = 108

[node name="SwordAttack" parent="." instance=ExtResource("3_4kuee")]
